# datalab-app-xrayct

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  INSTALL.md  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: ci.yml  docs.yml
docs/: reference.md
src/datalab_app_xrayct/: __init__.py  _version.py  blocks.py  mock_data.py  models.py  parser.py  resolvers.py
tests/: __init__.py  test_datalab_app_xrayct.py
webapp/: XrayCTBlock.vue
