[build-system]
requires = ["setuptools >= 75", "wheel", "setuptools_scm ~= 8.1"]
build-backend = "setuptools.build_meta"

[project]
name = "datalab-app-xrayct"
description = "Datalab plugin for X-ray CT and operando battery imaging datasets."
readme = "README.md"
keywords = []
license = { text = "MIT" }
authors = [{ name = "James Le Houx", email = "james.lehoux@gre.ac.uk" }]
dynamic = ["version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "Intended Audience :: System Administrators",
    "Intended Audience :: Information Technology",
    "Operating System :: OS Independent",
    "Topic :: Other/Nonlisted Topic",
    "Topic :: Scientific/Engineering",
]
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.6",
    "numpy>=1.26,<2",
    "nexusformat>=1.0",
    "h5py>=3.10",
    "tifffile>=2024.1",
    "Pillow>=10",
]

# NOTE on datalab-server / pydatalab:
# The currently published `datalab-server` on PyPI pins `pydantic<2`, which
# conflicts with this plugin's pydantic v2 schema. Until a v2-compatible
# release is published, install pydatalab from source into the same venv:
#
#     pip install "git+https://github.com/datalab-org/datalab.git#subdirectory=pydatalab"
#     pip install -e .
#
# See INSTALL.md for the full instructions.

[project.urls]
homepage = "https://jameslehoux.github.io/datalab-app-xrayct/"
repository = "https://github.com/jameslehoux/datalab-app-xrayct"
documentation = "https://jameslehoux.github.io/datalab-app-xrayct/"
changelog = "https://github.com/jameslehoux/datalab-app-xrayct/CHANGELOG.md"

# Edit this entry point with any block classes implemented in this plugin
[project.entry-points.'pydatalab.apps.plugins']
xrayct = "datalab_app_xrayct.blocks:XrayCTBlock"

[tool.setuptools.packages.find]
where = ["src"]
namespaces = true

[tool.setuptools.package-data]
datalab_app_xrayct = ["py.typed"]

[tool.mypy]
ignore_missing_imports = true
follow_imports = "skip"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "Q"]
ignore = ["E501", "E402"]
fixable = ["A", "B", "C", "D", "E", "F", "I"]
unfixable = []
per-file-ignores = {}
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.uv]
dev-dependencies = [
    # datalab-server intentionally omitted: PyPI release pins pydantic<2 and
    # is incompatible with our v2 schema. Install from git when needed locally.
    "pytest ~= 8.2",
    "pytest-cov ~= 5.0",
    "pre-commit ~= 4.0",
    "mkdocs ~= 1.6",
    "mkdocs-material ~= 9.5",
    "mkdocstrings[python] ~= 0.30",
    "docstring-inheritance ~= 2.2",
    "griffe-inherited-docstrings ~= 1.1",
    "mkdocs-awesome-pages-plugin ~= 2.9",
    "markdown-callouts ~= 0.4",
]

[tool.coverage.run]
include = ["src/*"]
parallel = true
branch = true

[tool.coverage.paths]
source = ["src/"]

[tool.coverage.report]
skip_covered = true
show_missing = true
exclude_lines = [
    '^\s*assert False(,|$)',
    'if typing.TYPE_CHECKING:',
    '^\s*@overload( |$)',
]
